Added multi set functionality